# Magistritoo

./: main.py  pyproject.toml  requirements.txt
andmed/: activities_small.csv  aktiivsused_duplikaatideta.csv  aktiivsused_kirjelduse_detailidega.csv  aktiivsused_oluline.csv  df_kombo_nr_0.csv  duplikaatide_info.csv  kombo_0_jarjestatud_outlierid.csv  kombo_1_jarjestatud_outlierid.csv  kombo_nr_0.csv  kombo_nr_0_duplikaatide_info.csv  kombo_nr_0_jaotus.csv  kombo_nr_1_duplikaatide_info.csv  kombo_nr_1_jaotus.csv  otsustusmetsa_valjund.txt  top_10_kombinatsiooni.json  top_5_combinations.json
andmed/kombo_nr_0/: kombo_nr_0_jaotus.csv
andmed/kombo_nr_0/graafikud/: ennustatud_kombo_nr_0_jarjestatud_7_tunnust_otsustusmets.ipynb  ennustatud_kombo_nr_0_jarjestatud_9-2_RFECV_otsustusmets.ipynb  ennustatud_kombo_nr_0_jarjestatud_RFECV_SFS_otsustusmets.ipynb  (+16 more)
andmed/kombo_nr_0_molekulid/: analüüsi_tabel.html
andmed/kombo_nr_1/: kombo_nr_1.csv  kombo_nr_1_jarjestatud_outlierid.csv
andmed/kombo_nr_1_molekulid/: analüüsi_tabel.html
data/: activities_small.csv  activities_small.xlsx  activities_with_assay_details.csv  activities_wo_duplicates.csv  chembl_ids.pkl  df_combo_nr_1.csv  top_10_combinations.json
src/: activity_data_chembl.py  andmete_tootlus.py  cell_lines_cellosaurus.py  cellosaurus_rakuliinid.py  chembl_aktiivuse_andmed.py  data_analysis.py  data_preprocessing.py  get_activity_data_chembl.py  graafikud.py  info_chembl_failist.py  info_from_description.py  model_training.py  mudeli_evalueerimine.py  mudelite_treenimine.py
src/magistritoo.egg-info/: PKG-INFO
(+34 files in other folders)
